tests/facebook_fbt_none/facebook_fbt_none.exp
Error: main.js:4
  4: (<fbt />: number); // Error: ReactElement ~> number
      ^^^^^^^ React element `fbt`
  4: (<fbt />: number); // Error: ReactElement ~> number
               ^^^^^^ number. This type is incompatible with
                                                                   v-
159: declare type React$Element<+ElementType: React$ElementType> = {|
160:   +type: ElementType,
161:   +props: React$ElementProps<ElementType>,
...:
164: |};
     -^ object type. See lib: <BUILTINS>/react.js:159


Found 1 error
